deployment-files/kustomize/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: indy-node-prometheus
spec:
  selector:
    app: indy-node-prometheus
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
