deployment-files/kustomize/prometheus/prometheus-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: indy-node-prometheus
  namespace: indy-node-monitoring-new
spec:
  host: indy-node-prometheus.apps.xkh544cb.canadacentral.aroapp.io
  to:
    kind: Service
    name: indy-node-prometheus
    weight: 100
  port:
    targetPort: '9090'
  tls:
    termination: edge
  wildcardPolicy: None
